# deepconf

./: .gitignore  MODEL_DEPLOYMENT.md  README.md  deepconf_offline_voting.py  deepconf_online_generation.py  deploy_model.sh  install-vllm.sh  process_p2q_testset.py  pyproject.toml  requirements.txt  setup-no-vllm.sh  setup.sh  stop_model.sh  test-vllm-install.sh
Dynasor/: README.md
Dynasor/examples/: client-vllm.py
data/: 0901版本planner.csv_out_0~1000_test.xlsx  p2q_testset.jsonl
infer/: deepconf_offline_generateion.py  deepconf_online_generation.py  deepconf_p2q.py  process_p2q_testset.py  qsite_merge_deepconf.py  read_pkl_results.py  requirements.txt  sentence_transformer_utils.py  simple_deepconf_demo.py  utils.py
infer/data/: 0901版本planner.csv_out_0~1000_test.xlsx  p2q_testset.jsonl
vllm/: pyproject.toml
