[project]
name = "deepconf"
version = "0.1.0"
description = "Deep Confidence Learning Project - Online generation and voting algorithms"
requires-python = ">=3.10"

dependencies = [
    # Core dependencies
    "openai>=1.3.0",
    "numpy>=1.21.0", 
    "tqdm>=4.65.0",
    "pandas>=1.5.0",
    "openpyxl>=3.1.0",
    
    # Machine Learning & NLP
    "torch>=2.7.1",
    "sentence-transformers>=2.2.0", 
    "transformers>=4.21.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.9.0",
    
    # Hugging Face ecosystem
    "huggingface-hub>=0.16.0",
    "tokenizers>=0.13.0", 
    "safetensors>=0.3.0",
    
    # Utilities
    "pyyaml>=6.0",
    "regex>=2022.7.9",
    "filelock>=3.8.0",
    "fsspec>=2023.5.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0", 
    "flake8>=5.0.0",
    "mypy>=0.991",
]

visualization = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0", 
    "plotly>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git 
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | vllm
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
exclude = [
    "vllm/",
    "infer/",
]
